example cards desktop completed

--- a/main/web-design.html
+++ b/main/web-design.html
@@ -43,75 +43,67 @@
         <section class="examples">
           <div class="container">
             <div class="examples__cards">
-              <div class="example__card">
-                <div class="card__hero">
-                  <img src="assets/images/web-design/desktop/image-express.jpg" alt="image of webpage with image of truck">
-                </div>
-                <div class="card__footer">
-                  <a href="example-1.html" class="card__link">
+
+              <div class="example-card">
+                <img class="card__image" src="assets/images/web-design/desktop/image-express.jpg" alt="image of webpage with image of truck">
+                <a href="example-1.html" class="card__link">
+                  <div class="card__footer">
                     <h3 class="card__title">Express</h3>
                     <p class="card__text">A multi-carrier shipping website for ecommerce businesses</p>
-                  </a>
-                </div>
+                  </div>
+                </a>
               </div>
-              <div class="example__card">
-                <div class="card__hero">
-                  <img src="assets/images/web-design/desktop/image-transfer.jpg" alt="image of webpage with image of two mobile phones">
-                </div>
-                <div class="card__footer">
-                  <a href="example-2.html" class="card__link">
+
+              <div class="example-card">
+                <img class="card__image" src="assets/images/web-design/desktop/image-transfer.jpg" alt="image of webpage with image of two mobile phones">
+                <a href="example-2.html" class="card__link">
+                  <div class="card__footer">
                     <h3 class="card__title">Transfer</h3>
                     <p class="card__text">Site for low-cost money transfers and sending money within seconds</p>
-                  </a>
                 </div>
+                </a>
               </div>
-              <div class="example__card">
-                <div class="card__hero">
-                  <img src="assets/images/web-design/desktop/image-photon.jpg" alt="image of webpage with image of a record and earphones">
-                </div>
-                <div class="card__footer">
-                  <a href="example-3.html" class="card__link">
-                    <h3 class="card__title">Photon</h3>
-                    <p class="card__text">A state-of-the-art music player with high-resolution audio and DSP effects</p>
-                  </a>
-                </div>
+
+              <div class="example-card">
+                <img class="card__image" src="assets/images/web-design/desktop/image-photon.jpg" alt="image of webpage with image of a record and earphones">
+                <a href="example-3.html" class="card__link">
+                   <div class="card__footer">
+                      <h3 class="card__title">Photon</h3>
+                      <p class="card__text">A state-of-the-art music player with high-resolution audio and DSP effects</p>
+                   </div>
+                </a>
               </div>
-              <div class="example__card">
-                <div class="card__hero">
-                  <img src="assets/images/web-design/desktop/image-builder.jpg"
-                    alt="image of a desk with chair and bookshelf">
-                </div>
-                <div class="card__footer">
-                  <a href="example-4.html" class="card__link">
+
+              <div class="example-card">
+                <img class="card__image" src="assets/images/web-design/desktop/image-builder.jpg" alt="image of a desk with chair and bookshelf">
+                <a href="example-4.html" class="card__link">
+                  <div class="card__footer">
                     <h3 class="card__title">Builder</h3>
                     <p class="card__text">Connects users with local contractors based on their location</p>
-                  </a>
-                </div>
+                  </div>
+                </a>
+
               </div>
-              <div class="example__card">
-                <div class="card__hero">
-                  <img src="assets/images/web-design/desktop/image-blogr.jpg"
-                    alt="image of a wavy line on a graph">
-                </div>
-                <div class="card__footer">
-                  <a href="example-5.html" class="card__link">
+              <div class="example-card">
+                <img class="card__image" src="assets/images/web-design/desktop/image-blogr.jpg" alt="image of a wavy line on a graph">
+                <a href="example-5.html" class="card__link">
+                  <div class="card__footer">
                     <h3 class="card__title">Blogr</h3>
                     <p class="card__text">Blogr is a platform for creating an online blog or publication</p>
-                  </a>
-                </div>
+                  </div>
+                </a>
+
               </div>
-              <div class="example__card">
-                <div class="card__hero">
-                  <img src="assets/images/web-design/desktop/image-camp.jpg"
-                    alt="image of a man's hands typing on a keyboard">
-                </div>
-                <div class="card__footer">
-                  <a href="example-3.html" class="card__link">
-                    <h3 class="card__title">Camp</h3>
+              <div class="example-card">
+                <img class="card__image" src="assets/images/web-design/desktop/image-camp.jpg" alt="image of a man's hands typing on a keyboard">
+                <a href="example-3.html" class="card__link">
+                  <div class="card__footer">
+                  <h3 class="card__title">Camp</h3>
                     <p class="card__text">Get expert training in coding, data, design, and digital marketing</p>
-                  </a>
-                </div>
+                  </div>
+                </a>
               </div>
+
             </div>
           </div>
         </section>
