rename navigation to make its purpose clearer

--- a/main/index.html
+++ b/main/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container-outer | margin-auto">
       <img class="container-outer__img container-outer__img--1" src="assets/images/shared/desktop/bg-pattern-leaf.svg" alt="white leaf shape">
-      <section class="navigation fixed">
+      <section class="nav-bar fixed">
         <div class="container">
           <nav class="nav fixed" role="navigation" aria-label="Main">
             <img class="nav__logo" src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo">
