complete card for tablet and mobile

--- a/main/web-design.html
+++ b/main/web-design.html
@@ -14,7 +14,7 @@
     <div class="web-design | container-outer | margin-auto">
       <img class="container-outer__img container-outer__img--1" src="assets/images/shared/desktop/bg-pattern-leaf.svg"
         alt="white leaf shape">
-      <section class="navigation fixed">
+      <section class="nav-bar fixed">
         <div class="container">
           <nav class="nav fixed" role="navigation" aria-label="Main">
             <div class="nav__logo"><img src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo"></div>
@@ -133,6 +133,18 @@
                 </div>
               </a>
 
+          </div>
+        </div>
+      </section>
+      <section class="cta">
+        <div class="container">
+          <div class="wide-card |  bg-primary">
+            <div class="text-component | text-center text-left@md">
+              <h2 class="wide-card__title">Let’s talk about your project</h2>
+              <p class="wide-card__text">Ready to take it to the next level? Contact us today and find out how our expertise
+                can help your business grow.</p>
+            </div>
+            <div class="btn btn--subtle">Get in touch</div>
           </div>
         </div>
       </section>
