complete component image_card for three or two cards

--- a/main/web-design.html
+++ b/main/web-design.html
@@ -99,7 +99,7 @@
 
       <section class="design">
         <div class="container">
-          <div class="image-cards">
+          <div class="image-cards image-cards--two-cards">
 
               <a class="image-card" href="app-design.html" id="image-card-app">
                 <div class="image-card__body">
@@ -111,7 +111,7 @@
                 </div>
               </a>
 
-              <a class="image-card" href="graphic-design.html" id="image-card-design">
+              <a class="image-card" href="graphic-design.html" id="image-card-graphic">
                 <div class="image-card__body">
                   <h2 class="image-card__title">Graphic Design</h2>
                   <div class="image-card__cta">
