--- a/main/index.html
+++ b/main/index.html
@@ -46,6 +46,7 @@
         <section class="design">
           <div class="container">
             <div class="image-cards">
+
               <a class="image-card" href="web-design.html" id="image-card-web">
                 <div class="image-card__body">
                   <h2 class="image-card__title">Web Design</h2>
@@ -66,7 +67,7 @@
                 </div>
               </a>
 
-              <a class="image-card" href="graphic-design.html" id="image-card-design">
+              <a class="image-card" href="graphic-design.html" id="image-card-graphic">
                 <div class="image-card__body">
                   <h2 class="image-card__title">Graphic Design</h2>
                   <div class="image-card__cta">
