--- a/main/graphic-design.html
+++ b/main/graphic-design.html
@@ -1,51 +1,158 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script>document.getElementsByTagName("html")[0].className += " js";</script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500&display=swap" rel="stylesheet">
+    <link id="codyframe" rel="stylesheet" href="./assets/css/style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+    <title>Frontend Mentor | Designo Agency Website Challenge</title>
+  </head>
+  <body>
+    <div class="web-design | container-outer | margin-auto">
+      <img class="container-outer__img container-outer__img--1" src="assets/images/shared/desktop/bg-pattern-leaf.svg"
+        alt="white leaf shape">
+      <section class="nav-bar fixed">
+        <div class="container">
+          <nav class="nav fixed" role="navigation" aria-label="Main">
+            <div class="nav__logo"><img src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo"></div>
+            <div class="nav__icon nav__icon--open" aria-label="Open menu" aria-hidden="true"
+              aria-controls="header-nav-list"><img src="./assets/images/shared/mobile/icon-hamburger.svg" alt="menu icon">
+            </div>
+            <div class="nav__icon nav__icon--close" aria-label="Close menu" aria-hidden="true"
+              aria-controls="header-nav-list"><img src="./assets/images/shared/mobile/icon-close.svg" alt="x icon"></div>
+            <ul class="nav__list | text-left" id="header-nav-list" aria-expanded="false">
+              <li><a href="about.html">Our Company</a></li>
+              <li><a href="locations.html">Locations</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </section>
+      <header class="header">
+        <div class="container">
+          <div class="wide-card | bg-primary">
+            <h1>Graphic Design</h1>
+            <p class="text-center text-responsive">We deliver eye-catching branding materials that are tailored to meet your business objectives.</p>
+          </div>
+        </div>
+      </header>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Designo Agency Website Challenge</title>
-</head>
-<body>
-  Our Company
-  Locations
-  Contact
+      <main>
+        <section class="examples">
+          <div class="container">
+            <div class="examples__cards">
 
-  Graphic design
-  We deliver eye-catching branding materials that are tailored to meet your business objectives.
+              <div class="example-card">
+                <img class="card__image" src="assets/images/graphic-design/desktop/image-change.jpg"
+                  alt="image of webpage with image of truck">
+                <a href="example-1.html" class="card__link">
+                  <h3 class="card__title">Tim Brown</h3>
+                  <p class="card__text">A book cover designed for Tim Brown’s new release, ‘Change’</p>
+                </a>
+              </div>
 
-  Tim Brown
-  A book cover designed for Tim Brown’s new release, ‘Change’
+              <div class="example-card">
+                <img class="card__image" src="assets/images/graphic-design/desktop/image-boxed-water.jpg"
+                  alt="image of webpage with image of two mobile phones">
+                <a href="example-2.html" class="card__link">
+                  <h3 class="card__title">Boxed Water</h3>
+                  <p class="card__text">A simple packaging concept made for Boxed Water</p>
+                </a>
+              </div>
 
-  Boxed water
-  A simple packaging concept made for Boxed Water
+              <div class="example-card">
+                <img class="card__image" src="assets/images/graphic-design/desktop/image-science.jpg"
+                  alt="image of webpage with image of a record and earphones">
+                <a href="example-3.html" class="card__link">
+                  <h3 class="card__title">Science</h3>
+                  <p class="card__text">A poster made in collaboration with the Federal Art Project</p>
+                </a>
+              </div>
 
-  Science!
-  A poster made in collaboration with the Federal Art Project
+            </div>
+          </div>
+        </section>
 
-  App Design
-  View Projects
+        <section class="design">
+          <div class="container">
+            <div class="image-cards image-cards--two-cards">
 
-  Web Design
-  View Projects
+              <a class="image-card" href="app-design.html" id="image-card-app">
+                <div class="image-card__body">
+                  <h2 class="image-card__title">App Design</h2>
+                  <div class="image-card__cta">
+                    <p class="image-card__text">View Projects</p>
+                    <img class="cta__icon" src="assets/images/shared/desktop/icon-right-arrow.svg" alt="right chevron">
+                  </div>
+                </div>
+              </a>
 
-  Let’s talk about your project
-  Ready to take it to the next level? Contact us today and find out how our expertise can 
-  help your business grow.
-  Get in touch
+              <a class="image-card" href="graphic-design.html" id="image-card-web">
+                <div class="image-card__body">
+                  <h2 class="image-card__title">Web Design</h2>
+                  <div class="image-card__cta">
+                    <p class="image-card__text">View Projects</p>
+                    <img class="cta__icon" src="assets/images/shared/desktop/icon-right-arrow.svg" alt="right chevron">
+                  </div>
+                </div>
+              </a>
 
-  Our company
-  Locations
-  Contact
+            </div>
+          </div>
+        </section>
+        <section class="cta">
+          <div class="container">
+            <div class="wide-card |  bg-primary">
+              <div class="text-component | text-center text-left@md">
+                <h2 class="wide-card__title">Let’s talk about your project</h2>
+                <p class="wide-card__text">Ready to take it to the next level? Contact us today and find out how our
+                  expertise
+                  can help your business grow.</p>
+              </div>
+              <div class="btn btn--subtle">Get in touch</div>
+            </div>
+          </div>
+        </section>
+      </main>
+      <footer class="footer bg-black-light">
+        <div class="container">
+          <nav class="nav">
+            <div class="nav__logo__container">
+              <img class="nav__logo" src="./assets/images/shared/desktop/logo-light.png" alt="designo logo">
+            </div>
+            <ul class="nav__list | text-center">
+              <li><a href="about.html">Our Company</a></li>
+              <li><a href="locations.html">Locations</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+          <div class="contact">
+            <div class="contact__address text-component">
+              <p class="text-bold">Designo Central Office</p>
+              <p>3886 Wellington Street</p>
+              <p>Toronto, Ontario M9C 3J5</p>
+            </div>
+            <div class="contact__phone text-component">
+              <p class="text-bold">Contact Us (Central Office)</p>
+              <p class="text-bold">P : +1 253-863-8967</p>
+              <p class="text-bold">M : contact@designo.co</p>
+            </div>
+            <div class="contact__social">
+              <img src="./assets/images/shared/desktop/icon-facebook.svg" alt="facebook icon">
+              <img src="./assets/images/shared/desktop/icon-youtube.svg" alt="youtube icon">
+              <img src="./assets/images/shared/desktop/icon-twitter.svg" alt="twitter icon">
+              <img src="./assets/images/shared/desktop/icon-pinterest.svg" alt="pinterest icon">
+              <img src="./assets/images/shared/desktop/icon-instagram.svg" alt="instagram icon">
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <script src="assets/js/scripts.js"></script>
+  </body>
 
-  Designo Central Office
-  3886 Wellington Street
-  Toronto, Ontario M9C 3J5
-
-  Contact Us (Central Office)
-  P : +1 253-863-8967
-  M : contact@designo.co
-</body>
 </html>
+
