--- a/main/about.html
+++ b/main/about.html
@@ -1,66 +1,181 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script>document.getElementsByTagName("html")[0].className += " js";</script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500&display=swap" rel="stylesheet">
+    <link id="codyframe" rel="stylesheet" href="./assets/css/style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+    <title>Frontend Mentor | Designo Agency Website Challenge</title>
+  </head>
+  <body>
+    <div class="container-outer | about | margin-auto">
+      <img class="container-outer__img container-outer__img--1" src="assets/images/shared/desktop/bg-pattern-leaf.svg" alt="white leaf shape">
+      <section class="nav-bar fixed">
+        <div class="container">
+          <nav class="nav fixed" role="navigation" aria-label="Main">
+            <img class="nav__logo" src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo">
+            <div class="nav__icon nav__icon--open" aria-label="Open menu" aria-hidden="true"
+              aria-controls="header-nav-list"><img src="./assets/images/shared/mobile/icon-hamburger.svg" alt="menu icon">
+            </div>
+            <div class="nav__icon nav__icon--close" aria-label="Close menu" aria-hidden="true"
+              aria-controls="header-nav-list"><img src="./assets/images/shared/mobile/icon-close.svg" alt="x icon"></div>
+            <ul class="nav__list | text-left" id="header-nav-list" aria-expanded="false">
+              <li><a href="about.html">Our Company</a></li>
+              <li><a href="locations.html">Locations</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </section>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Designo Agency Website Challenge</title>
-</head>
-<body>
-  Our Company
-  Locations
-  Contact
+      <header class="header">
+        <div class="container">
+          <div class="photo-card">
+            <div class="photo-card__content |  text-component | text-left@md bg-primary">
+              <h1>About us</h1>
+              <p>Founded in 2010, we are a creative agency that produces lasting results for our clients.
+              We’ve partnered with many startups, corporations, and nonprofits alike to craft designs
+              that make real impact. We’re always looking forward to creating brands, products, and
+              digital experiences that connect with our clients' audiences.</p>
+            </div>
+            <div class="photo-card__photo">
+              <img src="assets/images/about/desktop/image-about-hero.jpg" alt="top view of 6 people sitting at table">
+            </div>
+          </div>
+        </div>
+      </header>
 
-  About us
-  Founded in 2010, we are a creative agency that produces lasting results for our clients. 
-  We’ve partnered with many startups, corporations, and nonprofits alike to craft designs 
-  that make real impact. We’re always looking forward to creating brands, products, and 
-  digital experiences that connect with our clients' audiences.
+      <main>
+        <section class="talent">
+          <div class="container">
+            <div class="photo-card">
+              <div class="photo-card__photo">
+                <img src="assets/images/about/desktop/image-world-class-talent.jpg" alt="woman standing looking at photos on wall">
+              </div>
+              <div class="photo-card__content |  text-component | text-left@md bg-primary-lighter">
+                <h2>World-class talent</h2>
+                <p>We are a crew of strategists, problem-solvers, and technologists. Every design is thoughtfully
+                crafted from concept to launch, ensuring success in its given market. We are constantly updating
+                our skills in a myriad of platforms.</p>
 
-  World-class talent
-  We are a crew of strategists, problem-solvers, and technologists. Every design is thoughtfully 
-  crafted from concept to launch, ensuring success in its given market. We are constantly updating 
-  our skills in a myriad of platforms.
+                <p>Our team is multi-disciplinary and we are not merely interested in form — content and meaning
+                are just as important. We give great importance to craftsmanship, service, and prompt delivery.
+                Clients have always been impressed with our high-quality outcomes that encapsulates their
+                brand’s story and mission.</p>
+              </div>
+            </div>
+          </div>
+        </section>
 
-  Our team is multi-disciplinary and we are not merely interested in form — content and meaning 
-  are just as important. We give great importance to craftsmanship, service, and prompt delivery. 
-  Clients have always been impressed with our high-quality outcomes that encapsulates their 
-  brand’s story and mission.
+        <section class="locations">
+            <div class="container">
+              <div class="icon-cards">
 
-  The real deal
-  As strategic partners in our clients’ businesses, we are ready to take on any challenge as our own.
-  Solving real problems require empathy and collaboration, and we strive to bring a fresh perspective to every
-  opportunity. We make design and technology more accessible and give you tools to measure success.
+                <div class="icon-card">
+                  <div class="icon-card__icon">
+                    <img src="./assets/images/shared/desktop/illustration-canada.svg" alt="graphic of Toronto CN Tower">
+                  </div>
+                  <div class="text-component">
+                    <h3 class="icon-card__title">Canada</h3>
+                    <a href="#" class="icon-card__link| btn btn--primary">See location</a>
+                  </div>
+                </div>
 
-  We are visual storytellers in appealing and captivating ways. By combining business and marketing strategies, 
-  we inspire audiences to take action and drive real results.
+                <div class="icon-card">
+                  <div class="icon-card__icon">
+                    <img src="./assets/images/shared/desktop/illustration-australia.svg" alt="graphic of Sydney Opera House">
+                  </div>
+                  <div class="text-component">
+                    <h3 class="icon-card__title">Australia</h3>
+                    <a  href="#" class="icon-card__link | btn btn--primary ">See location</a>
+                  </div>
+                </div>
 
-  Canada
-  See location
+                <div class="icon-card">
+                  <div class="icon-card__icon">
+                    <img src="./assets/images/shared/desktop/illustration-united-kingdom.svg"alt="graphic of London Bridge">
+                  </div>
+                  <div class="text-component">
+                    <h3 class="icon-card__title">United Kingdom</h3>
+                    <a  href="#" class="icon-card__link | btn btn--primary">See location</a>
+                  </div>
+                </div>
 
-  Australia
-  See location
+              </div>
+            </div>
+        </section>
 
-  United Kingdom
-  See location
+        <section class="real-deal">
+          <div class="container">
+            <div class="photo-card">
+              <div class="photo-card__content |  text-component | text-left@md bg-primary-lighter">
+                <h2>The real deal</h2>
+                <p>As strategic partners in our clients’ businesses, we are ready to take on any challenge as our own.
+                Solving real problems require empathy and collaboration, and we strive to bring a fresh perspective to every
+                opportunity. We make design and technology more accessible and give you tools to measure success.</p>
 
-  Let’s talk about your project
-  Ready to take it to the next level? Contact us today and find out how our expertise can 
-  help your business grow.
-  Get in touch
+                <p>We are visual storytellers in appealing and captivating ways. By combining business and marketing strategies,
+                we inspire audiences to take action and drive real results.</p>
+              </div>
+              <div class="photo-card__photo">
+                <img src="assets/images/about/desktop/image-real-deal.jpg" alt="tow hands holding corners of photo taped to wall">
+              </div>
+            </div>
+          </div>
+        </section>
 
-  Our company
-  Locations
-  Contact
+        <section class="cta">
+          <div class="container">
+            <div class="wide-card |  bg-primary">
+              <div class="text-component | text-center text-left@md">
+                <h2 class="wide-card__title">Let’s talk about your project</h2>
+                <p class="wide-card__text">Ready to take it to the next level? Contact us today and find out how our expertise
+                  can help your business grow.</p>
+              </div>
+              <div class="btn btn--subtle">Get in touch</div>
+            </div>
+          </div>
+        </section>
 
-  Designo Central Office
-  3886 Wellington Street
-  Toronto, Ontario M9C 3J5
+      </main>
 
-  Contact Us (Central Office)
-  P : +1 253-863-8967
-  M : contact@designo.co
+      <img class="container-outer__img container-outer__img--2" src="assets/images/shared/desktop/bg-pattern-leaf.svg" alt="white leaf shape">
+      <footer class="footer bg-black-light">
+        <div class="container">
+          <nav class="nav">
+            <div class="nav__logo__container">
+              <img class="nav__logo" src="./assets/images/shared/desktop/logo-light.png" alt="designo logo">
+            </div>
+            <ul class="nav__list | text-center">
+              <li><a href="about.html">Our Company</a></li>
+              <li><a href="locations.html">Locations</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+          <div class="contact">
+            <div class="contact__address text-component">
+              <p class="text-bold">Designo Central Office</p>
+              <p>3886 Wellington Street</p>
+              <p>Toronto, Ontario M9C 3J5</p>
+            </div>
+            <div class="contact__phone text-component">
+              <p class="text-bold">Contact Us (Central Office)</p>
+              <p class="text-bold">P : +1 253-863-8967</p>
+              <p class="text-bold">M : contact@designo.co</p>
+            </div>
+            <div class="contact__social">
+              <img src="./assets/images/shared/desktop/icon-facebook.svg" alt="facebook icon">
+              <img src="./assets/images/shared/desktop/icon-youtube.svg" alt="youtube icon">
+              <img src="./assets/images/shared/desktop/icon-twitter.svg" alt="twitter icon">
+              <img src="./assets/images/shared/desktop/icon-pinterest.svg" alt="pinterest icon">
+              <img src="./assets/images/shared/desktop/icon-instagram.svg" alt="instagram icon">
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
 </body>
 </html>
