--- a/main/about.html
+++ b/main/about.html
@@ -34,6 +34,11 @@
       <header class="header">
         <div class="container">
           <div class="photo-card photo-card--primary | bg-circle bg-circle--left-bottom">
+            <div class="photo-card__photo photo-card__photo--right">
+              <img sizes="(min-width: 1024px) 476px, (min-width: 768px) 689px, 100vw"
+                srcset="assets/images/about/desktop/image-about-hero.jpg 476w, assets/images/about/tablet/image-about-hero.jpg 689w"
+                src="assets/images/about/mobile/image-about-hero.jpg" alt="top view of 6 people sitting at table">
+            </div>
             <div class="photo-card__content |  text-component | text-left@md">
               <h1>About us</h1>
               <p>Founded in 2010, we are a creative agency that produces lasting results for our clients.
@@ -41,13 +46,7 @@
               that make real impact. We’re always looking forward to creating brands, products, and
               digital experiences that connect with our clients' audiences.</p>
             </div>
-            <div class="photo-card__photo">
-              <img
-              sizes="(min-width: 1024px) 476px, (min-width: 768px) 689px, 100vw"
-              srcset="assets/images/about/desktop/image-about-hero.jpg 476w, assets/images/about/tablet/image-about-hero.jpg 689w"
-              src="assets/images/about/mobile/image-about-hero.jpg" alt="top view of 6 people sitting at table"
-              >
-            </div>
+
           </div>
         </div>
       </header>
@@ -115,6 +114,9 @@
         <section class="real-deal">
           <div class="container">
             <div class="photo-card">
+              <div class="photo-card__photo photo-card__photo--right">
+                <img src="assets/images/about/desktop/image-real-deal.jpg" alt="tow hands holding corners of photo taped to wall">
+              </div>
               <div class="photo-card__content |  text-component | text-left@md bg-primary-lighter">
                 <h2>The real deal</h2>
                 <p>As strategic partners in our clients’ businesses, we are ready to take on any challenge as our own.
@@ -124,9 +126,7 @@
                 <p>We are visual storytellers in appealing and captivating ways. By combining business and marketing strategies,
                 we inspire audiences to take action and drive real results.</p>
               </div>
-              <div class="photo-card__photo">
-                <img src="assets/images/about/desktop/image-real-deal.jpg" alt="tow hands holding corners of photo taped to wall">
-              </div>
+
             </div>
           </div>
         </section>
