photo-card tablet

--- a/main/about.html
+++ b/main/about.html
@@ -33,9 +33,10 @@
 
       <header class="header">
         <div class="container">
-          <div class="photo-card photo-card--primary | bg-circle bg-circle--left-bottom">
+          <div class="photo-card photo-card--primary | bg-circle">
             <div class="photo-card__photo photo-card__photo--right">
-              <img sizes="(min-width: 1024px) 476px, (min-width: 768px) 689px, 100vw"
+              <img
+                sizes="(min-width: 1024px) 476px, (min-width: 768px) 689px, 100vw"
                 srcset="assets/images/about/desktop/image-about-hero.jpg 476w, assets/images/about/tablet/image-about-hero.jpg 689w"
                 src="assets/images/about/mobile/image-about-hero.jpg" alt="top view of 6 people sitting at table">
             </div>
@@ -56,7 +57,10 @@
           <div class="container">
             <div class="photo-card">
               <div class="photo-card__photo">
-                <img src="assets/images/about/desktop/image-world-class-talent.jpg" alt="woman standing looking at photos on wall">
+                <img
+                sizes="(min-width: 1024px) 476px, (min-width: 768px) 689px, 100vw"
+                srcset="assets/images/about/desktop/image-world-class-talent.jpg 476w, assets/images/about/tablet/image-world-class-talent.jpg 689w"
+                src="assets/images/about/desktop/image-world-class-talent.jpg" alt="woman standing looking at photos on wall">
               </div>
               <div class="photo-card__content |  text-component | text-left@md bg-primary-lighter">
                 <h2>World-class talent</h2>
@@ -115,7 +119,10 @@
           <div class="container">
             <div class="photo-card">
               <div class="photo-card__photo photo-card__photo--right">
-                <img src="assets/images/about/desktop/image-real-deal.jpg" alt="tow hands holding corners of photo taped to wall">
+                <img
+                sizes="(min-width: 1024px) 476px, (min-width: 768px) 689px, 100vw"
+                srcset="assets/images/about/desktop/image-real-deal.jpg 476w, assets/images/about/tablet/image-real-deal.jpg 689w"
+                src="assets/images/about/desktop/image-real-deal.jpg" alt="tow hands holding corners of photo taped to wall">
               </div>
               <div class="photo-card__content |  text-component | text-left@md bg-primary-lighter">
                 <h2>The real deal</h2>
