fix max width for cards using container modifier class

--- a/main/about.html
+++ b/main/about.html
@@ -32,7 +32,7 @@
       </section>
 
       <header class="header">
-        <div class="container">
+        <div class="container container--width-100@mobile">
           <div class="photo-card photo-card--primary | bg-circle">
             <div class="photo-card__photo photo-card__photo--right">
               <img
@@ -54,7 +54,7 @@
 
       <main>
         <section class="talent">
-          <div class="container">
+          <div class="container container--width-100@mobile">
             <div class="photo-card">
               <div class="photo-card__photo">
                 <img
@@ -116,7 +116,7 @@
         </section>
 
         <section class="real-deal">
-          <div class="container">
+          <div class="container container--width-100@mobile">
             <div class="photo-card">
               <div class="photo-card__photo photo-card__photo--right">
                 <img
