--- a/main/index.html
+++ b/main/index.html
@@ -29,7 +29,7 @@
       </section>
 
       <header class="header">
-        <div class="container">
+        <div class="container container--width-100@mobile">
           <div class="hero">
             <div class="hero__article | text-component | text-center text-left@md">
               <h1>Award-winning custom designs and digital branding solutions</h1>
