use color utility classes for background of photo cards

--- a/main/about.html
+++ b/main/about.html
@@ -33,14 +33,14 @@
 
       <header class="header">
         <div class="container container--width-100@mobile">
-          <div class="photo-card photo-card--primary | bg-circle">
+          <div class="photo-card">
             <div class="photo-card__photo photo-card__photo--right">
               <img
                 sizes="(min-width: 1024px) 476px, (min-width: 768px) 689px, 375px"
                 srcset="assets/images/about/desktop/image-about-hero.jpg 476w, assets/images/about/tablet/image-about-hero.jpg 689w, assets/images/about/mobile/image-about-hero.jpg 375w"
                 src="assets/images/about/mobile/image-about-hero.jpg" alt="top view of 6 people sitting at table">
             </div>
-            <div class="photo-card__content |  text-component | text-left@md">
+            <div class="photo-card__content | text-left@md bg-primary bg-circle">
               <h1>About us</h1>
               <p>Founded in 2010, we are a creative agency that produces lasting results for our clients.
               We’ve partnered with many startups, corporations, and nonprofits alike to craft designs
@@ -55,14 +55,14 @@
       <main>
         <section class="talent">
           <div class="container container--width-100@mobile">
-            <div class="photo-card">
+            <div class="photo-card ">
               <div class="photo-card__photo">
                 <img
                   sizes="(min-width: 1024px) 476px, (min-width: 768px) 689px, 375px"
                   srcset="assets/images/about/desktop/image-world-class-talent.jpg 476w, assets/images/about/tablet/image-world-class-talent.jpg 689w, assets/images/about/mobile/image-world-class-talent.jpg 375w"
                   src="assets/images/about/mobile/image-world-class-talent.jpg" alt="woman standing looking at photos on wall">
               </div>
-              <div class="photo-card__content |  text-component | text-left@md bg-primary-lighter">
+              <div class="photo-card__content | text-left@md bg-primary-lighter">
                 <h2>World-class talent</h2>
                 <p>We are a crew of strategists, problem-solvers, and technologists. Every design is thoughtfully
                 crafted from concept to launch, ensuring success in its given market. We are constantly updating
