--- a/main/about.html
+++ b/main/about.html
@@ -40,7 +40,7 @@
                 srcset="assets/images/about/desktop/image-about-hero.jpg 476w, assets/images/about/tablet/image-about-hero.jpg 689w, assets/images/about/mobile/image-about-hero.jpg 375w"
                 src="assets/images/about/mobile/image-about-hero.jpg" alt="top view of 6 people sitting at table">
             </div>
-            <div class="photo-card__content | text-left@md bg-primary bg-circle">
+            <div class="photo-card__content | bg-primary bg-circle">
               <h1>About us</h1>
               <p>Founded in 2010, we are a creative agency that produces lasting results for our clients.
               We’ve partnered with many startups, corporations, and nonprofits alike to craft designs
@@ -62,7 +62,7 @@
                   srcset="assets/images/about/desktop/image-world-class-talent.jpg 476w, assets/images/about/tablet/image-world-class-talent.jpg 689w, assets/images/about/mobile/image-world-class-talent.jpg 375w"
                   src="assets/images/about/mobile/image-world-class-talent.jpg" alt="woman standing looking at photos on wall">
               </div>
-              <div class="photo-card__content | text-left@md bg-primary-lighter">
+              <div class="photo-card__content | bg-primary-lighter">
                 <h2>World-class talent</h2>
                 <p>We are a crew of strategists, problem-solvers, and technologists. Every design is thoughtfully
                 crafted from concept to launch, ensuring success in its given market. We are constantly updating
@@ -92,7 +92,7 @@
                 </div>
 
                 <div class="icon-card">
-                  <div class="icon-card__icon">
+                  <div class="icon-card__icon icon-card__icon--90">
                     <img src="./assets/images/shared/desktop/illustration-australia.svg" alt="graphic of Sydney Opera House">
                   </div>
                   <div class="text-component">
@@ -102,7 +102,7 @@
                 </div>
 
                 <div class="icon-card">
-                  <div class="icon-card__icon">
+                  <div class="icon-card__icon icon-card__icon--180">
                     <img src="./assets/images/shared/desktop/illustration-united-kingdom.svg"alt="graphic of London Bridge">
                   </div>
                   <div class="text-component">
@@ -124,7 +124,7 @@
                   srcset="assets/images/about/desktop/image-real-deal.jpg 476w, assets/images/about/tablet/image-real-deal.jpg 689w, assets/images/about/desktop/image-real-deal.jpg 375w"
                   src="assets/images/about/desktop/image-real-deal.jpg" alt="tow hands holding corners of photo taped to wall">
               </div>
-              <div class="photo-card__content |  text-component | text-left@md bg-primary-lighter">
+              <div class="photo-card__content |  bg-primary-lighter">
                 <h2>The real deal</h2>
                 <p>As strategic partners in our clients’ businesses, we are ready to take on any challenge as our own.
                 Solving real problems require empathy and collaboration, and we strive to bring a fresh perspective to every
