--- a/main/about.html
+++ b/main/about.html
@@ -63,7 +63,7 @@
                   src="assets/images/about/mobile/image-world-class-talent.jpg" alt="woman standing looking at photos on wall">
               </div>
               <div class="photo-card__content | bg-primary-lighter">
-                <h2>World-class talent</h2>
+                <h2 class="color-primary">World-class talent</h2>
                 <p>We are a crew of strategists, problem-solvers, and technologists. Every design is thoughtfully
                 crafted from concept to launch, ensuring success in its given market. We are constantly updating
                 our skills in a myriad of platforms.</p>
@@ -125,7 +125,7 @@
                   src="assets/images/about/desktop/image-real-deal.jpg" alt="tow hands holding corners of photo taped to wall">
               </div>
               <div class="photo-card__content |  bg-primary-lighter">
-                <h2>The real deal</h2>
+                <h2 class="color-primary">The real deal</h2>
                 <p>As strategic partners in our clients’ businesses, we are ready to take on any challenge as our own.
                 Solving real problems require empathy and collaboration, and we strive to bring a fresh perspective to every
                 opportunity. We make design and technology more accessible and give you tools to measure success.</p>
