use modifier class to control icon card layout

--- a/main/index.html
+++ b/main/index.html
@@ -86,7 +86,7 @@
           <div class="container">
             <div class="icon-cards">
 
-              <div class="icon-card">
+              <div class="icon-card icon-card--horizontal@sm">
                 <div class="icon-card__icon">
                   <img src="./assets/images/home/desktop/illustration-passionate.svg" alt="man writing on tablet">
                 </div>
@@ -97,7 +97,7 @@
                 </div>
               </div>
 
-              <div class="icon-card">
+              <div class="icon-card icon-card--horizontal@sm">
                 <div class="icon-card__icon">
                   <img src="./assets/images/home/desktop/illustration-resourceful.svg" alt="man writing on tablet">
                 </div>
@@ -108,7 +108,7 @@
                 </div>
               </div>
 
-              <div class="icon-card">
+              <div class="icon-card icon-card--horizontal@sm">
                 <div class="icon-card__icon">
                   <img src="./assets/images/home/desktop/illustration-friendly.svg" alt="man writing on tablet">
                 </div>
