add modulator classes to rotate background

--- a/main/app-design.html
+++ b/main/app-design.html
@@ -34,7 +34,7 @@
       </section>
       <header class="header">
         <div class="container">
-          <div class="wide-card | bg-primary">
+          <div class="wide-card wide-card--flip-horizontal | bg-primary">
             <h1>App design</h1>
             <p class="text-center text-responsive">Our mobile designs bring intuitive digital solutions to your customers right at their fingertips.</p>
           </div>
