--- a/main/graphic-design.html
+++ b/main/graphic-design.html
@@ -33,7 +33,7 @@
       </section>
       <header class="header">
         <div class="container">
-          <div class="wide-card | bg-primary">
+          <div class="wide-card wide-card--flip-horizontal | bg-primary">
             <h1>Graphic Design</h1>
             <p class="text-center text-responsive">We deliver eye-catching branding materials that are tailored to meet your business objectives.</p>
           </div>
