--- a/main/web-design.html
+++ b/main/web-design.html
@@ -33,7 +33,7 @@
       </section>
       <header class="header">
         <div class="container">
-          <div class="wide-card | bg-primary">
+          <div class="wide-card wide-card--flip-vertical | bg-primary">
             <h1>Web design</h1>
             <p class="text-center text-responsive">We build websites that serve as powerful marketing tools and bring memorable brand experiences.</p>
           </div>
