--- a/main/contact.html
+++ b/main/contact.html
@@ -1,21 +1,135 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Designo Agency Website Challenge</title>
-</head>
-<body>
-  Our Company
-  Locations
-  Contact
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script>document.getElementsByTagName("html")[0].className += " js";</script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500&display=swap" rel="stylesheet">
+    <link id="codyframe" rel="stylesheet" href="./assets/css/style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+    <title>Frontend Mentor | Designo Agency Website Challenge</title>
+  </head>
+  <body>
+    <div class="contact | container-outer | margin-auto">
+      <section class="nav-bar fixed">
+        <div class="container">
+          <nav class="nav fixed" role="navigation" aria-label="Main">
+            <img class="nav__logo" src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo">
+            <div class="nav__icon nav__icon--open" aria-label="Open menu" aria-hidden="true"
+              aria-controls="header-nav-list"><img src="./assets/images/shared/mobile/icon-hamburger.svg" alt="menu icon">
+            </div>
+            <div class="nav__icon nav__icon--close" aria-label="Close menu" aria-hidden="true"
+              aria-controls="header-nav-list"><img src="./assets/images/shared/mobile/icon-close.svg" alt="x icon"></div>
+            <ul class="nav__list | text-left" id="header-nav-list" aria-expanded="false">
+              <li><a href="about.html">Our Company</a></li>
+              <li><a href="locations.html">Locations</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </section>
+
+      <header class="header">
+        <div class="container container--width-100@mobile">
+          <div class="hero bg-circle bg-primary">
+            <div class="hero__article | text-component | text-center text-left@md">
+              <h1>Contact us</h1>
+              <p>Ready to take it to the next level? Let’s talk about your project or idea and find out how
+              we can help your business grow. If you are looking for unique digital experiences that’s
+              relatable to your users, drop us a line.</p>
+            </div>
+            <div class="hero__form">
+              <form action="createContact.html" method="post">
+                <div class="form-control-group">
+                  <input type="text" class="form-control" placeholder="Name">
+                </div>
+
+              </form>
+            </div>
+          </div>
+        </div>
+      </header>
+      <main>
+        <section class="locations">
+          <div class="container">
+            <div class="icon-cards">
+
+              <div class="icon-card">
+                <div class="icon-card__icon">
+                  <img src="./assets/images/shared/desktop/illustration-canada.svg" alt="graphic of Toronto CN Tower">
+                </div>
+                <div class="text-component">
+                  <h3 class="icon-card__title">Canada</h3>
+                  <a href="#" class="icon-card__link| btn btn--primary">See location</a>
+                </div>
+              </div>
+
+              <div class="icon-card">
+                <div class="icon-card__icon icon-card__icon--90">
+                  <img src="./assets/images/shared/desktop/illustration-australia.svg" alt="graphic of Sydney Opera House">
+                </div>
+                <div class="text-component">
+                  <h3 class="icon-card__title">Australia</h3>
+                  <a href="#" class="icon-card__link | btn btn--primary ">See location</a>
+                </div>
+              </div>
+
+              <div class="icon-card">
+                <div class="icon-card__icon icon-card__icon--180">
+                  <img src="./assets/images/shared/desktop/illustration-united-kingdom.svg" alt="graphic of London Bridge">
+                </div>
+                <div class="text-component">
+                  <h3 class="icon-card__title">United Kingdom</h3>
+                  <a href="#" class="icon-card__link | btn btn--primary">See location</a>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </section>
+      </main>
+      <footer class="footer bg-black-light">
+        <div class="container">
+          <nav class="nav">
+            <div class="nav__logo__container">
+              <img class="nav__logo" src="./assets/images/shared/desktop/logo-light.png" alt="designo logo">
+            </div>
+            <ul class="nav__list | text-center">
+              <li><a href="about.html">Our Company</a></li>
+              <li><a href="locations.html">Locations</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+          <div class="contact">
+            <div class="contact__address text-component">
+              <p class="text-bold">Designo Central Office</p>
+              <p>3886 Wellington Street</p>
+              <p>Toronto, Ontario M9C 3J5</p>
+            </div>
+            <div class="contact__phone text-component">
+              <p class="text-bold">Contact Us (Central Office)</p>
+              <p class="text-bold">P : +1 253-863-8967</p>
+              <p class="text-bold">M : contact@designo.co</p>
+            </div>
+            <div class="contact__social">
+              <img src="./assets/images/shared/desktop/icon-facebook.svg" alt="facebook icon">
+              <img src="./assets/images/shared/desktop/icon-youtube.svg" alt="youtube icon">
+              <img src="./assets/images/shared/desktop/icon-twitter.svg" alt="twitter icon">
+              <img src="./assets/images/shared/desktop/icon-pinterest.svg" alt="pinterest icon">
+              <img src="./assets/images/shared/desktop/icon-instagram.svg" alt="instagram icon">
+            </div>
+          </div>
+        </div>
+      </footer>
+      </div>
+      <script src="assets/js/scripts.js"></script>
+
 
   Contact us
-  Ready to take it to the next level? Let’s talk about your project or idea and find out how 
-  we can help your business grow. If you are looking for unique digital experiences that’s 
+  Ready to take it to the next level? Let’s talk about your project or idea and find out how
+  we can help your business grow. If you are looking for unique digital experiences that’s
   relatable to your users, drop us a line.
 
   Name
