form destkop layout completed

--- a/main/contact.html
+++ b/main/contact.html
@@ -40,14 +40,19 @@
               we can help your business grow. If you are looking for unique digital experiences that’s
               relatable to your users, drop us a line.</p>
             </div>
-            <div class="hero__form">
-              <form action="createContact.html" method="post">
-                <div class="form-control-group">
-                  <input type="text" class="form-control" placeholder="Name">
+
+              <form action="createContact.html"  class="hero__form" method="post">
+
+                <input type="text" class="form-control" placeholder="Name">
+                <input type="email" class="form-control" placeholder="Email address">
+                <input type="text" class="form-control" placeholder="Phone">
+                <textarea type="textarea" class="form-control" placeholder="Your message" ols="30" rows="4"></textarea>
+                <div class="form-action-group">
+                 <button type="submit" class="btn btn--subtle">Submit</button>
                 </div>
 
               </form>
-            </div>
+
           </div>
         </div>
       </header>
