--- a/main/contact.html
+++ b/main/contact.html
@@ -43,7 +43,7 @@
 
               <form action="createContact.html"  class="hero__form" method="post">
                 <div class="form-control-group">
-                  <input type="text" class="form-control" placeholder="Name">
+                  <input type="text" class="form-control" placeholder="Name" required>
                 </div>
 
                 <div class="form-control-group">
@@ -56,10 +56,6 @@
 
                 <div class="form-control-group">
                 <textarea type="textarea" class="form-control" placeholder="Your message" ols="30" rows="4"></textarea>
-                  <div class="form-field-error">
-                    <p class="font-italic margin-right-xs">Can't be empty</p>
-                    <img src="assets/images/contact/desktop/icon-error.svg" alt="exclamation point">
-                  </div>
                 </div>
 
                 <div class="form-action-group">
