contactus tablet size coded

--- a/main/contact.html
+++ b/main/contact.html
@@ -34,8 +34,8 @@
       <header class="header">
         <div class="container container--width-100@mobile">
           <div class="hero bg-circle bg-primary">
-            <div class="hero__article | text-component | text-center text-left@md">
-              <h1>Contact us</h1>
+            <div class="hero__article | text-component ">
+              <h1 class="text-left">Contact us</h1>
               <p>Ready to take it to the next level? Let’s talk about your project or idea and find out how
               we can help your business grow. If you are looking for unique digital experiences that’s
               relatable to your users, drop us a line.</p>
