--- a/main/contact.html
+++ b/main/contact.html
@@ -15,7 +15,7 @@
       <section class="nav-bar fixed">
         <div class="container">
           <nav class="nav fixed" role="navigation" aria-label="Main">
-            <img class="nav__logo" src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo">
+            <a href="index.html"><img class="nav__logo" src="./assets/images/shared/desktop/logo-dark.png" alt="designo logo"></a>
             <div class="nav__icon nav__icon--open" aria-label="Open menu" aria-hidden="true"
               aria-controls="header-nav-list"><img src="./assets/images/shared/mobile/icon-hamburger.svg" alt="menu icon">
             </div>
