use flow content utility to space elements out evenly

--- a/main/contact.html
+++ b/main/contact.html
@@ -33,7 +33,7 @@
       <header class="header">
         <div class="container container--width-100@mobile">
           <div class="hero bg-circle bg-primary">
-            <div class="hero__article | text-component">
+            <div class="hero__article | flow-content">
               <h1>Contact us</h1>
               <p>Ready to take it to the next level? Let’s talk about your project or idea and find out how
               we can help your business grow. If you are looking for unique digital experiences that’s
