complete fixes and site is as good as its going to get

--- a/main/web-design.html
+++ b/main/web-design.html
@@ -32,7 +32,7 @@
         </div>
       </section>
       <header class="header">
-        <div class="container">
+        <div class="container container--width-100@mobile">
           <div class="wide-card wide-card--flip-vertical | bg-primary">
             <h1>Web design</h1>
             <p class="text-center text-responsive">We build websites that serve as powerful marketing tools and bring memorable brand experiences.</p>
