working with simpler setup

--- a/main/locations.html
+++ b/main/locations.html
@@ -42,20 +42,16 @@
             </div>
 
             <div class="map-card__intro | bg-primary-lighter bg-circle">
-              <div class="text-component">
-                <h1 class="color-primary">Canada</h1>
-                <div class="map-card__details">
-                  <div class="text-component">
-                    <p class="text-bold">Designo Central Office</p>
-                    <p>3886 Wellington Street</p>
-                    <p>Toronto, Ontario M9C 3J5</p>
-                  </div>
-                  <div class="text-component">
-                    <p class="text-bold">Contact</p>
-                    <p>P : +1 253-863-8967</p>
-                    <p>M : contact@designo.co</p>
-                  </div>
-                </div>
+              <h1 class="color-primary text-center text-left@sm">Canada</h1>
+              <div class="text-center text-left@sm">
+                <p class="text-bold">Designo Central Office</p>
+                <p>3886 Wellington Street</p>
+                <p>Toronto, Ontario M9C 3J5</p>
+              </div>
+              <div class="text-center text-left@sm">
+                <p class="text-bold">Contact</p>
+                <p>P : +1 253-863-8967</p>
+                <p>M : contact@designo.co</p>
               </div>
             </div>
           </div>
