complete coding of map card component

--- a/main/locations.html
+++ b/main/locations.html
@@ -34,27 +34,28 @@
 
       <header class="header">
         <div class="container container--width-100@mobile">
+
           <div class="map-card">
             <div class="map-card__image map-card__image--right">
               <img sizes="(min-width: 1024px) 375px, (min-width: 768px) 689px, 375px"
                 srcset="assets/images/locations/desktop/image-map-canada.png 375w, assets/images/locations/tablet/image-map-canada.png 689w"
                 src="assets/images/locations/desktop/image-map-canada.png" alt="map of canada">
             </div>
-
             <div class="map-card__intro | bg-primary-lighter bg-circle">
-              <h1 class="color-primary text-center text-left@sm">Canada</h1>
-              <div class="text-center text-left@sm">
+              <h1 class="color-primary">Canada</h1>
+              <div>
                 <p class="text-bold">Designo Central Office</p>
                 <p>3886 Wellington Street</p>
                 <p>Toronto, Ontario M9C 3J5</p>
               </div>
-              <div class="text-center text-left@sm">
+              <div>
                 <p class="text-bold">Contact</p>
                 <p>P : +1 253-863-8967</p>
                 <p>M : contact@designo.co</p>
               </div>
             </div>
           </div>
+
         </div>
       </header>
   </div>
