refactored code to use utility class for border radius

--- a/main/index.html
+++ b/main/index.html
@@ -43,7 +43,7 @@
       </header>
 
       <main>
-        <section class="design">
+        <section class="services">
           <div class="container">
             <div class="image-cards">
 
@@ -126,7 +126,7 @@
 
         <section class="cta">
           <div class="container">
-            <div class="wide-card |  bg-primary">
+            <div class="wide-card |  border-radius | bg-primary">
               <div class="text-component | text-center text-left@md">
                 <h2 class="wide-card__title">Let’s talk about your project</h2>
                 <p class="wide-card__text">Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.</p>
