--- a/main/graphic-design.html
+++ b/main/graphic-design.html
@@ -11,7 +11,7 @@
     <title>Frontend Mentor | Designo Agency Website Challenge</title>
   </head>
   <body>
-    <div class="web-design | container-outer | margin-auto">
+    <div class="design | container-outer | margin-auto">
       <img class="container-outer__img container-outer__img--1" src="assets/images/shared/desktop/bg-pattern-leaf.svg"
         alt="white leaf shape">
       <section class="nav-bar fixed">
@@ -76,7 +76,7 @@
           </div>
         </section>
 
-        <section class="design">
+        <section class="services">
           <div class="container">
             <div class="image-cards image-cards--two-cards">
 
@@ -90,7 +90,7 @@
                 </div>
               </a>
 
-              <a class="image-card" href="graphic-design.html" id="image-card-web">
+              <a class="image-card" href="web-design.html" id="image-card-web">
                 <div class="image-card__body">
                   <h2 class="image-card__title">Web Design</h2>
                   <div class="image-card__cta">
@@ -105,7 +105,7 @@
         </section>
         <section class="cta">
           <div class="container">
-            <div class="wide-card |  bg-primary">
+            <div class="wide-card |  border-radius | bg-primary">
               <div class="text-component | text-center text-left@md">
                 <h2 class="wide-card__title">Let’s talk about your project</h2>
                 <p class="wide-card__text">Ready to take it to the next level? Contact us today and find out how our
