--- a/main/locations.html
+++ b/main/locations.html
@@ -103,7 +103,7 @@
       <main>
         <section class="cta">
           <div class="container">
-            <div class="wide-card |  bg-primary">
+            <div class="wide-card |  border-radius | bg-primary">
               <div class="text-component | text-center text-left@md">
                 <h2 class="wide-card__title">Let’s talk about your project</h2>
                 <p class="wide-card__text">Ready to take it to the next level? Contact us today and find out how our expertise
