--- a/main/web-design.html
+++ b/main/web-design.html
@@ -11,7 +11,7 @@
     <title>Frontend Mentor | Designo Agency Website Challenge</title>
   </head>
   <body>
-    <div class="web-design | container-outer | margin-auto">
+    <div class="design | container-outer | margin-auto">
       <img class="container-outer__img container-outer__img--1" src="assets/images/shared/desktop/bg-pattern-leaf.svg"
         alt="white leaf shape">
       <section class="nav-bar fixed">
@@ -97,7 +97,7 @@
           </div>
         </section>
 
-      <section class="design">
+      <section class="services">
         <div class="container">
           <div class="image-cards image-cards--two-cards">
 
@@ -126,7 +126,7 @@
       </section>
       <section class="cta">
         <div class="container">
-          <div class="wide-card |  bg-primary">
+          <div class="wide-card |  border-radius | bg-primary">
             <div class="text-component | text-center text-left@md">
               <h2 class="wide-card__title">Let’s talk about your project</h2>
               <p class="wide-card__text">Ready to take it to the next level? Contact us today and find out how our expertise
