complete refactoring of design cards

--- a/main/graphic-design.html
+++ b/main/graphic-design.html
@@ -32,7 +32,7 @@
         </div>
       </section>
       <header class="header">
-        <div class="container">
+        <div class="container container--width-100@mobile">
           <div class="wide-card wide-card--flip-horizontal | bg-primary">
             <h1>Graphic Design</h1>
             <p class="text-center text-responsive">We deliver eye-catching branding materials that are tailored to meet your business objectives.</p>
