--- a/main/web-design.html
+++ b/main/web-design.html
@@ -11,7 +11,7 @@
     <title>Frontend Mentor | Designo Agency Website Challenge</title>
   </head>
   <body>
-    <div class="design | container-outer | margin-auto">
+    <div class="web-design | container-outer | margin-auto">
       <img class="container-outer__img container-outer__img--1" src="assets/images/shared/desktop/bg-pattern-leaf.svg"
         alt="white leaf shape">
       <section class="nav-bar fixed">
@@ -31,9 +31,10 @@
           </nav>
         </div>
       </section>
+
       <header class="header">
         <div class="container container--width-100@mobile">
-          <div class="wide-card wide-card--flip-vertical | bg-primary">
+          <div class="design-card design-card--flip-vertical | bg-primary">
             <h1>Web design</h1>
             <p class="text-center text-responsive">We build websites that serve as powerful marketing tools and bring memorable brand experiences.</p>
           </div>
