refactor code remove unnecessary classes and simplify component

--- a/main/app-design.html
+++ b/main/app-design.html
@@ -12,7 +12,7 @@
     <title>Frontend Mentor | Designo Agency Website Challenge</title>
   </head>
   <body>
-    <div class="design | container-outer | margin-auto">
+    <div class="app-design | container-outer | margin-auto">
       <img class="container-outer__img container-outer__img--1" src="assets/images/shared/desktop/bg-pattern-leaf.svg"
         alt="white leaf shape">
       <section class="nav-bar fixed">
@@ -34,9 +34,9 @@
       </section>
       <header class="header">
         <div class="container container--width-100@mobile">
-          <div class="wide-card wide-card--flip-horizontal | bg-primary">
+          <div class="design-card | bg-primary">
             <h1>App design</h1>
-            <p class="text-center text-responsive">Our mobile designs bring intuitive digital solutions to your customers right at their fingertips.</p>
+            <p>Our mobile designs bring intuitive digital solutions to your customers right at their fingertips.</p>
           </div>
         </div>
       </header>
