--- a/main/web-design.html
+++ b/main/web-design.html
@@ -34,9 +34,9 @@
 
       <header class="header">
         <div class="container container--width-100@mobile">
-          <div class="design-card design-card--flip-vertical | bg-primary">
+          <div class="design-card | bg-primary">
             <h1>Web design</h1>
-            <p class="text-center text-responsive">We build websites that serve as powerful marketing tools and bring memorable brand experiences.</p>
+            <p>We build websites that serve as powerful marketing tools and bring memorable brand experiences.</p>
           </div>
         </div>
       </header>
