--- a/main/index.html
+++ b/main/index.html
@@ -126,15 +126,16 @@
 
         <section class="cta">
           <div class="container">
-            <div class="wide-card |  border-radius | bg-primary">
-              <div class="text-component | text-center text-left@md">
-                <h2 class="wide-card__title">Let’s talk about your project</h2>
-                <p class="wide-card__text">Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.</p>
+            <div class="cta-card | bg-primary">
+              <div class="text-component">
+                <h2 class="cta-card__title">Let’s talk about your project</h2>
+                <p class="cta-card__text | responsive-text">Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.</p>
               </div>
               <div class="btn btn--subtle">Get in touch</div>
             </div>
           </div>
         </section>
+
       </main>
       <img class="container-outer__img container-outer__img--2 rotate-180" src="assets/images/shared/desktop/bg-pattern-leaf.svg" alt="white leaf shape">
       <footer class="footer bg-black-light">
