--- a/main/graphic-design.html
+++ b/main/graphic-design.html
@@ -36,7 +36,7 @@
         <div class="container container--width-100@mobile">
           <div class="design-card | bg-primary">
             <h1>Graphic Design</h1>
-            <p>We deliver eye-catching branding materials that are tailored to meet your business objectives.</p>
+            <p class="responsive-text">We deliver eye-catching branding materials that are tailored to meet your business objectives.</p>
           </div>
         </div>
       </header>
