--- a/main/app-design.html
+++ b/main/app-design.html
@@ -36,7 +36,7 @@
         <div class="container container--width-100@mobile">
           <div class="design-card | bg-primary">
             <h1>App design</h1>
-            <p>Our mobile designs bring intuitive digital solutions to your customers right at their fingertips.</p>
+            <p class="responsive-text">Our mobile designs bring intuitive digital solutions to your customers right at their fingertips.</p>
           </div>
         </div>
       </header>
