--- a/main/web-design.html
+++ b/main/web-design.html
@@ -36,7 +36,7 @@
         <div class="container container--width-100@mobile">
           <div class="design-card | bg-primary">
             <h1>Web design</h1>
-            <p>We build websites that serve as powerful marketing tools and bring memorable brand experiences.</p>
+            <p class="responsive-text">We build websites that serve as powerful marketing tools and bring memorable brand experiences.</p>
           </div>
         </div>
       </header>
