convert photo-content component to text-component

--- a/main/about.html
+++ b/main/about.html
@@ -40,7 +40,7 @@
                 srcset="assets/images/about/desktop/image-about-hero.jpg 476w, assets/images/about/tablet/image-about-hero.jpg 689w, assets/images/about/mobile/image-about-hero.jpg 375w"
                 src="assets/images/about/mobile/image-about-hero.jpg" alt="top view of 6 people sitting at table">
             </div>
-            <div class="photo-card__content | bg-primary bg-circle | flow-content">
+            <div class="photo-card__content | bg-primary bg-circle | text-component">
               <h1>About us</h1>
               <p>Founded in 2010, we are a creative agency that produces lasting results for our clients.
               We’ve partnered with many startups, corporations, and nonprofits alike to craft designs
@@ -62,7 +62,7 @@
                   srcset="assets/images/about/desktop/image-world-class-talent.jpg 476w, assets/images/about/tablet/image-world-class-talent.jpg 689w, assets/images/about/mobile/image-world-class-talent.jpg 375w"
                   src="assets/images/about/mobile/image-world-class-talent.jpg" alt="woman standing looking at photos on wall">
               </div>
-              <div class="photo-card__content | bg-primary-lighter bg-circle | flow-content">
+              <div class="photo-card__content | bg-primary-lighter bg-circle | text-component">
                 <h2 class="color-primary">World-class talent</h2>
                 <p>We are a crew of strategists, problem-solvers, and technologists. Every design is thoughtfully
                 crafted from concept to launch, ensuring success in its given market. We are constantly updating
@@ -124,7 +124,7 @@
                   srcset="assets/images/about/desktop/image-real-deal.jpg 476w, assets/images/about/tablet/image-real-deal.jpg 689w, assets/images/about/mobile/image-real-deal.jpg 375w"
                   src="assets/images/about/desktop/image-real-deal.jpg" alt="tow hands holding corners of photo taped to wall">
               </div>
-              <div class="photo-card__content |  bg-primary-lighter bg-circle | flow-content">
+              <div class="photo-card__content |  bg-primary-lighter bg-circle | text-component">
                 <h2 class="color-primary">The real deal</h2>
                 <p>As strategic partners in our clients’ businesses, we are ready to take on any challenge as our own.
                 Solving real problems require empathy and collaboration, and we strive to bring a fresh perspective to every
